#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

#AC_PREREQ(2.60)
AC_INIT(YoctoExampleApp, 1.0, anil.arise1600@gmail.com)
AC_CONFIG_SRCDIR([HelloWorld.c])
#AC_CONFIG_HEADERS([config.h])
#AM_INIT_AUTOMAKE(YoctoExampleApp main)
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.
#AM_PROG_LIBTOOL

# Set shared libraries
#AC_DISABLE_STATIC
#AC_ENABLE_SHARED

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

#AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
